--- a/index.html
+++ b/index.html
@@ -8,7 +8,35 @@
     </head>
     
     <body>
-        JS Caclculator
+        <head>
+            <h1>JS Calculator</h1>
+        </head>
+        <main>
+            <div class="calculator-box">
+                <div class="screen">0</div>
+                <div class="buttons-grid">
+                    <div class="top clear" value="clear">AC</div>
+                    <div class="top sign" value="sign">+/-</div>
+                    <div class="top percent" value="percent">%</div>
+                    <div class="operator divide">/</div>
+                    <div class="num" value="7">7</div>
+                    <div class="num" value="8">8</div>
+                    <div class="num" value="9">9</div>
+                    <div class="operator multiply">*</div>
+                    <div class="num" value="4">4</div>
+                    <div class="num" value="5">5</div>
+                    <div class="num" value="6">6</div>
+                    <div class="operator minus">-</div>
+                    <div class="num" value="1">1</div>
+                    <div class="num" value="2">2</div>
+                    <div class="num" value="3">3</div>
+                    <div class="operator plus">+</div>
+                    <div class="num" value="0">0</div>
+                    <div class="decimal" value=".">.</div>
+                    <div class="operator equal">=</div>
+                </div>
+            </div>
+        </main>
         <script src="js/script.js"></script>
     </body>
 </html>
