basic functionality on numButtons

--- a/index.html
+++ b/index.html
@@ -13,27 +13,27 @@
         </head>
         <main>
             <div class="calculator-box">
-                <div class="screen">0</div>
+                <div class="screen"></div>
                 <div class="buttons-grid">
-                    <div class="top clear" value="clear">AC</div>
-                    <div class="top sign" value="sign">+/-</div>
-                    <div class="top percent" value="percent">%</div>
-                    <div class="operator divide">/</div>
-                    <div class="num" value="7">7</div>
-                    <div class="num" value="8">8</div>
-                    <div class="num" value="9">9</div>
-                    <div class="operator multiply">*</div>
-                    <div class="num" value="4">4</div>
-                    <div class="num" value="5">5</div>
-                    <div class="num" value="6">6</div>
-                    <div class="operator minus">-</div>
-                    <div class="num" value="1">1</div>
-                    <div class="num" value="2">2</div>
-                    <div class="num" value="3">3</div>
-                    <div class="operator plus">+</div>
-                    <div class="num" value="0">0</div>
-                    <div class="decimal" value=".">.</div>
-                    <div class="operator equal">=</div>
+                    <div class="btn top clear" value="clear" data-key="8">AC</div>
+                    <div class="btn top sign" value="sign" data-key="192">+/-</div>
+                    <div class="btn top percent" value="percent" data-key="80">%</div>
+                    <div class="btn operator divide" data-key="191">/</div>
+                    <div class="btn num" value="7" data-key="55">7</div>
+                    <div class="btn num" value="8" data-key="56">8</div>
+                    <div class="btn num" value="9" data-key="57">9</div>
+                    <div class="btn operator multiply" data-key="88">*</div>
+                    <div class="btn num" value="4" data-key="52">4</div>
+                    <div class="btn num" value="5" data-key="53">5</div>
+                    <div class="btn num" value="6" data-key="54">6</div>
+                    <div class="btn operator minus" data-key="189">-</div>
+                    <div class="btn num" value="1" data-key="49">1</div>
+                    <div class="btn num" value="2" data-key="50">2</div>
+                    <div class="btn num" value="3" data-key="51">3</div>
+                    <div class="btn operator plus" data-key="187">+</div>
+                    <div class="btn num" value="0" data-key="48">0</div>
+                    <div class="btn decimal" value="." data-key="190">.</div>
+                    <div class="btn operator equal" data-key="13">=</div>
                 </div>
             </div>
         </main>
