--- a/index.html
+++ b/index.html
@@ -15,25 +15,49 @@
             <div class="calculator-box">
                 <div class="screen"></div>
                 <div class="buttons-grid">
-                    <div class="btn top clear" value="clear" data-key="8">AC</div>
-                    <div class="btn top sign" value="sign" data-key="192">+/-</div>
-                    <div class="btn top percent" value="percent" data-key="80">%</div>
-                    <div class="btn operator divide" data-key="191">/</div>
+                    <div class="btn top clear" value="clear" data-key="8">
+                        AC
+                        <div>backspace</div>
+                    </div>
+                    <div class="btn top sign" value="sign" data-key="192">
+                        +/-
+                        <div>`</div>
+                    </div>
+                    <div class="btn top percent" value="percent" data-key="80">
+                        %
+                        <div>p</div>
+                    </div>
+                    <div class="btn operator" value="divide" data-key="191">
+                        /
+                        <div>/</div>
+                    </div>
                     <div class="btn num" value="7" data-key="55">7</div>
                     <div class="btn num" value="8" data-key="56">8</div>
                     <div class="btn num" value="9" data-key="57">9</div>
-                    <div class="btn operator multiply" data-key="88">*</div>
+                    <div class="btn operator" value="multiply" data-key="88">
+                        *
+                        <div>x</div>
+                    </div>
                     <div class="btn num" value="4" data-key="52">4</div>
                     <div class="btn num" value="5" data-key="53">5</div>
                     <div class="btn num" value="6" data-key="54">6</div>
-                    <div class="btn operator minus" data-key="189">-</div>
+                    <div class="btn operator" value="minus" data-key="189">
+                        -
+                        <div>-</div>
+                    </div>
                     <div class="btn num" value="1" data-key="49">1</div>
                     <div class="btn num" value="2" data-key="50">2</div>
                     <div class="btn num" value="3" data-key="51">3</div>
-                    <div class="btn operator plus" data-key="187">+</div>
+                    <div class="btn operator" value="plus" data-key="187">
+                        +
+                        <div>+</div>
+                    </div>
                     <div class="btn num" value="0" data-key="48">0</div>
-                    <div class="btn decimal" value="." data-key="190">.</div>
-                    <div class="btn operator equal" data-key="13">=</div>
+                    <div class="btn num" value="." data-key="190">.</div>
+                    <div class="btn operator" value="equal" data-key="13">
+                        =
+                        <div>enter</div>
+                    </div>
                 </div>
             </div>
         </main>
